@@ -121,6 +121,8 @@
 	Fixed expansion of abbrevs that leave command-line mode.  Patch by
 	filterfalse.
 
+	Fixed completion of :cabbrev not using bracket notation in expansion.
+
 0.13-beta to 0.13 (2023-04-04)
 
 	Made "withicase" and "withrcase" affect how files are sorted before
